feat: implement wallet
